# TMA4280_Project_2

./: .gitignore
src/: CMakeLists.txt  extern.hpp  main.cpp  plotter.py  poisson.c  rhs.hpp  structs.hpp  utils.cpp  utils.hpp
